# fuin

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yml  alembic.ini  config.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
assets/: stub.dex
docs/: THREAT_MODEL.md  index.md
fuin/: _constants.py  _utils.py  analyze.py  android_tools.py  apk.py  apk_info.py  cli.py  config.py  crypto.py  integrity.py  manifest.py  native_lib.py  packer.py  report.py  resource_encrypt.py  signing.py  string_encrypt.py  stub_dex.py  zipalign.py
fuin/server/: database.py  deps.py  main.py  models.py  pipeline.py
fuin/server/services/: cleanup_service.py  pack_service.py  webhook_service.py
fuin/server/static/: index.html
gradle-plugin/: build.gradle.kts  settings.gradle.kts
gradle-plugin/src/main/kotlin/com/fuin/gradle/: FuinExtension.kt  FuinPackTask.kt  FuinPlugin.kt
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_normalize_webhooks_add_indexes.py
packer/: apk.py  main.py  manifest.py  server_client.py  stub_dex.py
server/: database.py  jobs.py  main.py  models.py  packer_pipeline.py  pipeline.py
stub/: gradlew  settings.gradle.kts
stub/app/: build.gradle.kts
stub/app/src/main/java/com/fuin/stub/: ApplicationSwap.kt  Crypto.kt  DecryptingAssetManager.kt  IntegrityCheck.kt  KeyServerClient.kt  NativeLibDecryptor.kt  SecurityCheck.kt  SignatureHelper.kt  StringDecryptor.kt  StubApplication.kt
stub/app/src/main/res/values/: fuin.xml
stub/gradle/: libs.versions.toml
tests/: conftest.py  test_apk.py  test_crypto.py  test_manifest.py  test_pipeline.py  test_server.py
