[project]
name = "fuin"
version = "0.1.0"
description = "Android DEX Packer — web-based APK packing for static analysis resistance"
requires-python = ">=3.12"
dependencies = [
    # packer
    "cryptography>=42.0.0",
    # server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.50",
    "pydantic>=2.7.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
]

[project.scripts]
fuin-pack   = "fuin.cli:main"
fuin-server = "fuin.server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["fuin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
